WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
105456
[Regression] text-overflow ellipsis clips content when zoomed
https://bugs.webkit.org/show_bug.cgi?id=105456
Summary
[Regression] text-overflow ellipsis clips content when zoomed
Emil A Eklund
Reported
2012-12-19 13:11:55 PST
At certain zoom levels text-overflow ellipsis incorrectly clips content and displays the ellipsis even though the full content would fit. Downstream chromium bug:
http://code.google.com/p/chromium/issues/detail?id=144057
Attachments
Patch
(7.28 KB, patch)
2012-12-19 13:17 PST
,
Emil A Eklund
no flags
Details
Formatted Diff
Diff
Patch
(8.42 KB, patch)
2012-12-19 13:41 PST
,
Emil A Eklund
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Emil A Eklund
Comment 1
2012-12-19 13:17:41 PST
Created
attachment 180214
[details]
Patch
Levi Weintraub
Comment 2
2012-12-19 13:37:37 PST
Comment on
attachment 180214
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=180214&action=review
> Source/WebCore/rendering/RenderBlockLineLayout.cpp:3203 > + // FIXME: Use pixelSnappedLogicalRightOffsetForLine instead of snapping it ourselves once the column workaround in said method has been fixed. > + int blockRightEdge = logicalRightOffsetForLine(curr->lineTop(), firstLine).round();
Emil and I discussed using pixel snapping methods instead of .round() to make this clearer. I'd also like a bug for the column issue so these two fixmes can be tied together better.
Emil A Eklund
Comment 3
2012-12-19 13:41:37 PST
Created
attachment 180219
[details]
Patch
Emil A Eklund
Comment 4
2012-12-19 15:08:56 PST
Committed
r138196
: <
http://trac.webkit.org/changeset/138196
>
Mark Rowe (bdash)
Comment 5
2012-12-20 18:36:15 PST
This appears to have caused unnecessarily ellipsization on a number of websites. See
bug 105600
for information.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug