[Regression] text-overflow ellipsis clips content when zoomed https://bugs.webkit.org/show_bug.cgi?id=105456

Reviewed by Levi Weintraub.

Source/WebCore:

At certain zoom levels text-overflow ellipsis incorrectly clips
content and displays the ellipsis even though the full content
would fit.

Test: fast/sub-pixel/ellipsis-zoom.html

* rendering/RenderBlock.h:
(WebCore::RenderBlock::pixelSnappedLogicalRightOffsetForLine):
Add bug url to FIXME.

* rendering/RenderBlockLineLayout.cpp:
(WebCore::RenderBlock::checkLinesForTextOverflow):
Pixel snap the content edge before comparing with the line box
edge as the line box edge is aligned to a pixel boundary.

LayoutTests:

Add test for text-overflow: ellipsis.

* fast/sub-pixel/ellipsis-zoom-expected.html: Added.
* fast/sub-pixel/ellipsis-zoom.html: Added.


Canonical link: https://commits.webkit.org/123692@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@138196 268f45cc-cd09-0410-ab3c-d52691b4dbfc